--- a/index.html
+++ b/index.html
@@ -226,7 +226,13 @@
 
              
               <div class="p-2 w-full pt-8 mt-8 border-t border-gray-200 text-center">
-                <a class="text-indigo-500">example@email.com</a>
+                <a class="text-indigo-500">somanathnayak1304@gmail.com</a>
+                <a class="text-indigo-500">sriramch2005@gmail.com</a> 
+                <a class="text-indigo-500">srisaisagarla@gmail.com</a>
+                <a class="text-indigo-500">anuragnarsingoju@gmail.com</a>
+                <a class="text-indigo-500">pranavdingary@gmail.com</a>
+
+
                 <p class="leading-normal my-5">Keshav Memorial Institute of Technology, Dayanand Marg, Hari Vihar Colony, Bhawani Nagar, Narayanguda, Hyderabad, Telangana 500029
                 </p>
                 <span class="inline-flex">
