--- a/index.html
+++ b/index.html
@@ -226,10 +226,10 @@
 
              
               <div class="p-2 w-full pt-8 mt-8 border-t border-gray-200 text-center">
-                <a class="text-indigo-500">somanathnayak1304@gmail.com</a>
-                <a class="text-indigo-500">sriramch2005@gmail.com</a> 
-                <a class="text-indigo-500">srisaisagarla@gmail.com</a>
-                <a class="text-indigo-500">anuragnarsingoju@gmail.com</a>
+                <a class="text-indigo-500">somanathnayak1304@gmail.com</a><br>
+                <a class="text-indigo-500">sriramch2005@gmail.com</a><br> 
+                <a class="text-indigo-500">srisaisagarla@gmail.com</a><br>
+                <a class="text-indigo-500">anuragnarsingoju@gmail.com</a><br>
                 <a class="text-indigo-500">pranavdingary@gmail.com</a>
 
 
