download link changes

--- a/index.html
+++ b/index.html
@@ -37,7 +37,7 @@
               <path d="M5 12h14M12 5l7 7-7 7"></path>
             </svg>
           </button> -->
-          <a href="CySentry_App.zip" download='CySentry.zip' class="download-btn">Download Zip File
+          <a href="CySentry_App.zip" download='CySentry_App.zip' class="download-btn">Download Zip File
             <i class="fa fa-download"></i>
         </a>
         </div>
