--- a/index.html
+++ b/index.html
@@ -145,7 +145,7 @@
 
       <h1 style="margin-bottom: 0%;left:500px;font-size: xx-large;" class="sm:text-3xl text-2xl font-medium title-font text-center text-gray-900 mb-20"  style="cursor: default;">How to Use</h1>
       <section class="text-gray-600 body-font">
-      <h1 style="margin-bottom: 0%;left:500px;font-size: xx-large;" class="sm:text-3xl text-2xl font-medium title-font text-center text-gray-900 mb-20"  style="cursor: default;"><a href="https://www.youtube.com/watch?v=ZQj_PIDPyBo">Click Here for a Tutorial</a></h1>
+      <h2 style="margin-bottom: 0%;left:250px;font-size: x-large;" class="sm:text-3xl text-2xl font-medium title-font text-center text-gray-900 mb-20"  style="cursor: default;"><a href="https://www.youtube.com/watch?v=ZQj_PIDPyBo">Click Here for a Youtube Tutorial</a></h2>
         <div class="container px-5 py-24 mx-auto flex flex-wrap">
           <div class="flex relative pt-10 pb-20 sm:items-center md:w-2/3 mx-auto">
             <div class="h-full w-6 absolute inset-0 flex items-center justify-center">
