Update index.html(about us)

--- a/index.html
+++ b/index.html
@@ -25,8 +25,7 @@
           </a>
           <nav class="md:mr-auto md:ml-4 md:py-1 md:pl-4 md:border-l md:border-gray-400	flex flex-wrap items-center text-base justify-center">
             <div class="aaaa">
-              <a class="mr-5 hover:text-gray-900" href="http://127.0.0.1:5500/PS.html">Home</a>
-              <a  class="mr-5 hover:text-gray-900" href="http://127.0.0.1:5500/about_us.html" >About Us</a>
+              <a  class="mr-5 hover:text-gray-900" href="about_us.html" >About Us</a>
               <!-- <a class="mr-5 hover:text-gray-900" href="">How to Use</a> -->
               
 
