--- a/about_us.html
+++ b/about_us.html
@@ -48,12 +48,21 @@
       <h1 class="sm:text-3xl text-2xl font-medium title-font mb-4 text-gray-900">Our Team</h1>
       <p class="lg:w-2/3 mx-auto leading-relaxed text-base">The Unknown Hands behind the masterpiece, who played a significant role in developing the software</p>
     </div>
+    <div class="p-2 lg:w-1/3 md:w-1/2 w-full">
+        <div class="h-full flex items-center border-gray-200 border p-4 rounded-lg">
+          <img alt="team" class="w-16 h-16 bg-gray-100 object-cover object-center flex-shrink-0 rounded-full mr-4" src="https://dummyimage.com/98x98">
+          <div class="flex-grow">
+            <h2 class="text-gray-900 title-font font-medium">Somanath Nayak</h2>
+            <!-- <p class="text-gray-500">UX Researcher</p> -->
+          </div>
+        </div>
+      </div>
     <div class="flex flex-wrap -m-2">
       <div class="p-2 lg:w-1/3 md:w-1/2 w-full">
         <div class="h-full flex items-center border-gray-200 border p-4 rounded-lg">
           <img alt="team" class="w-16 h-16 bg-gray-100 object-cover object-center flex-shrink-0 rounded-full mr-4" src="Leonardo_Diffusion_XL_80_x_80_cartoon_boy_profile_photo_1.jpg">
           <div class="flex-grow">
-            <h2 class="text-gray-900 title-font font-medium">Rama Chandra Bharadwaj</h2>
+            <h2 class="text-gray-900 title-font font-medium">Ramachandra Bharadwaj</h2>
             <!-- <p class="text-gray-500">UI Designer</p> -->
           </div>
         </div>
@@ -62,7 +71,7 @@
         <div class="h-full flex items-center border-gray-200 border p-4 rounded-lg">
           <img alt="team" class="w-16 h-16 bg-gray-100 object-cover object-center flex-shrink-0 rounded-full mr-4" src="https://dummyimage.com/84x84">
           <div class="flex-grow">
-            <h2 class="text-gray-900 title-font font-medium">Anurag</h2>
+            <h2 class="text-gray-900 title-font font-medium">Anurag Narsingoju</h2>
             <!-- <p class="text-gray-500">CTO</p> -->
           </div>
         </div>
@@ -71,7 +80,7 @@
         <div class="h-full flex items-center border-gray-200 border p-4 rounded-lg">
           <img alt="team" class="w-16 h-16 bg-gray-100 object-cover object-center flex-shrink-0 rounded-full mr-4" src="https://dummyimage.com/88x88">
           <div class="flex-grow">
-            <h2 class="text-gray-900 title-font font-medium">Sri Sai</h2>
+            <h2 class="text-gray-900 title-font font-medium">Sri Sai Patel</h2>
             <!-- <p class="text-gray-500">Founder</p> -->
           </div>
         </div>
@@ -80,7 +89,7 @@
         <div class="h-full flex items-center border-gray-200 border p-4 rounded-lg">
           <img alt="team" class="w-16 h-16 bg-gray-100 object-cover object-center flex-shrink-0 rounded-full mr-4" src="Leonardo_Diffusion_XL_80_x_80_cartoon_boy_profile_photo_3.jpg">
           <div class="flex-grow">
-            <h2 class="text-gray-900 title-font font-medium">Pranav</h2>
+            <h2 class="text-gray-900 title-font font-medium">Dingiri Pranav</h2>
             <!-- <p class="text-gray-500">DevOps</p> -->
           </div>
         </div>
@@ -89,44 +98,8 @@
         <div class="h-full flex items-center border-gray-200 border p-4 rounded-lg">
           <img alt="team" class="w-16 h-16 bg-gray-100 object-cover object-center flex-shrink-0 rounded-full mr-4" src="https://dummyimage.com/94x94">
           <div class="flex-grow">
-            <h2 class="text-gray-900 title-font font-medium">Suchith</h2>
+            <h2 class="text-gray-900 title-font font-medium">D.Suchith</h2>
             <!-- <p class="text-gray-500">Software Engineer</p> -->
-          </div>
-        </div>
-      </div>
-      <div class="p-2 lg:w-1/3 md:w-1/2 w-full">
-        <div class="h-full flex items-center border-gray-200 border p-4 rounded-lg">
-          <img alt="team" class="w-16 h-16 bg-gray-100 object-cover object-center flex-shrink-0 rounded-full mr-4" src="https://dummyimage.com/98x98">
-          <div class="flex-grow">
-            <h2 class="text-gray-900 title-font font-medium">Somanath</h2>
-            <!-- <p class="text-gray-500">UX Researcher</p> -->
-          </div>
-        </div>
-      </div>
-      <div class="p-2 lg:w-1/3 md:w-1/2 w-full">
-        <div class="h-full flex items-center border-gray-200 border p-4 rounded-lg">
-          <img alt="team" class="w-16 h-16 bg-gray-100 object-cover object-center flex-shrink-0 rounded-full mr-4" src="https://dummyimage.com/100x90">
-          <div class="flex-grow">
-            <h2 class="text-gray-900 title-font font-medium">Atticus Finch</h2>
-            <!-- <p class="text-gray-500">QA Engineer</p> -->
-          </div>
-        </div>
-      </div>
-      <div class="p-2 lg:w-1/3 md:w-1/2 w-full">
-        <div class="h-full flex items-center border-gray-200 border p-4 rounded-lg">
-          <img alt="team" class="w-16 h-16 bg-gray-100 object-cover object-center flex-shrink-0 rounded-full mr-4" src="https://dummyimage.com/104x94">
-          <div class="flex-grow">
-            <h2 class="text-gray-900 title-font font-medium">Alper Kamu</h2>
-            <!-- <p class="text-gray-500">System</p> -->
-          </div>
-        </div>
-      </div>
-      <div class="p-2 lg:w-1/3 md:w-1/2 w-full">
-        <div class="h-full flex items-center border-gray-200 border p-4 rounded-lg">
-          <img alt="team" class="w-16 h-16 bg-gray-100 object-cover object-center flex-shrink-0 rounded-full mr-4" src="https://dummyimage.com/108x98">
-          <div class="flex-grow">
-            <h2 class="text-gray-900 title-font font-medium">Rodrigo Monchi</h2>
-            <!-- <p class="text-gray-500">Product Manager</p> -->
           </div>
         </div>
       </div>
